--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,10 @@
     "twbs/bootstrap": ">=5.3, <5.4"
   },
   "require-dev": {
-    "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-    "squizlabs/php_codesniffer": "^3.7",
-    "wp-coding-standards/wpcs": "^3.0"
+    "squizlabs/php_codesniffer": "^4.0"
   },
   "scripts": {
     "lint": "./vendor/bin/phpcs",
-    "lint:fix": "./vendor/bin/phpcbf"
-  },
-  "config": {
-    "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true
-    }
+    "lint:fix": "./vendor/bin/phpcbf || true"
   }
 }
