feat(theme): add emoji loading toggle and minified script support

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /assets/css/
 /assets/scss/vendors/
 !/assets/scss/vendors/bootstrap/_bootstrap-configuration*.scss
+/assets/js/main.min.js
 
 # Composer dependencies
 /vendor/
